--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JIGALIN 3JS</title>
+    <title>Three.js Demo</title>
   </head>
   <body>
     <canvas id="canvas"></canvas>
+
+    <script type="module" src="/src/main.js"></script>
+  </body>
+</html>
+
 
     <main>
       <header>
